# knative-appdev

./: .gitignore  AGENTS.md  PLAN.md  README.md  Taskfile.yml
docs/: architecture.md  deployment-flow.md  local-dev.md
manifests/networking/: knative-localhost-domain.yaml
manifests/samples/: hello-knative-service.yaml
samples/: README.md
samples/go-webapp/: Dockerfile  README.md  go.mod  main.go
samples/go-webapp/static/: index.html
samples/python-webapp/: Dockerfile  README.md  app.py
samples/python-webapp/static/: index.html
samples/rust-webapp/: Cargo.toml  Dockerfile  README.md
samples/rust-webapp/src/: main.rs
samples/rust-webapp/static/: index.html
samples/ts-webapp/: .dockerignore  Dockerfile  README.md
samples/ts-webapp/backend/: package.json  tsconfig.json
samples/ts-webapp/frontend/: index.html  package.json  tailwind.config.ts
samples/webapp/: Dockerfile  README.md
samples/webapp/backend/: package.json  server.js
samples/webapp/frontend/: app.js  index.html  styles.css
scripts/: build-deploy-local.sh  cleanup-demo-apps.sh  curl-knative-localhost.sh  demo-flow-real.sh  demo-flow-stop.sh  demo-flow.sh  deploy-app-dashboard.sh  expose-knative-localhost-bg.sh  expose-knative-localhost-stop.sh  expose-knative-localhost.sh  expose-knative.sh  func-build-deploy.sh  install-knative-serving.sh  setup-minikube.sh  upload-app.sh  upload-sample-webapp.sh  verify-knative.sh
src/app-dashboard/: Dockerfile  README.md  go.mod  main.go
src/upload-api/: README.md  go.mod  main.go
tests/: test-upload-workflow.sh  validate-local.sh
(+5 files in other folders)
