[package]
name = "rust-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
